@@ -489,6 +489,10 @@ Bug fixes
 * LUCENE-3251: Directory#copy failed to close target output if opening the
   source stream failed. (Simon Willnauer)
 
+* LUCENE-3254: Fixed minor bug in deletes were written to disk,
+  causing the file to sometimes be larger than it needed to be.  (Mike
+  McCandless)
+
 Optimizations
 
 * LUCENE-3201, LUCENE-3218: CompoundFileSystem code has been consolidated 
